<resources>
    <string name="app_name">小七学伴 答案</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_verify_code">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">不是合法的手机号</string>
    <string name="invalid_password">验证码 > 4 位</string>
    <string name="login_failed">"登录失败"</string>
    <string name="label_input_second_pwd">请输入二次验证密码：\n若二次验证密码未知，可发送申请码至 i@mslxl.com 申请，申请结果将使用电子邮件发回</string>
    <string name="action_get_code">获取验证码</string>
    <string name="action_about">关于</string>
    <string name="confirm">确定</string>
    <string name="switch_use_code">使用验证码登录</string>
    <string name="switch_remember_password">记住密码</string>
</resources>
